--- a/app movil/src/modules/auth/containers/register/register.component.html
+++ b/app movil/src/modules/auth/containers/register/register.component.html
@@ -8,26 +8,51 @@
                         <form>
                             <div class="form-row">
                                 <div class="col-md-6">
-                                    <div class="form-group"><label class="small mb-1" for="inputFirstName">First Name</label><input class="form-control py-4" id="inputFirstName" type="text" placeholder="Enter first name" /></div>
+                                    <div class="form-group"><label class="small mb-1" for="inputFirstName">Nombre</label><input class="form-control py-4" id="inputFirstName" type="text" placeholder="Enter first name" /></div>
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="form-group"><label class="small mb-1" for="inputLastName">Last Name</label><input class="form-control py-4" id="inputLastName" type="text" placeholder="Enter last name" /></div>
+                                    <div class="form-group"><label class="small mb-1" for="inputLastName">Apellidos</label><input class="form-control py-4" id="inputLastName" type="text" placeholder="Enter last name" /></div>
                                 </div>
                             </div>
                             <div class="form-group"><label class="small mb-1" for="inputEmailAddress">Email</label><input class="form-control py-4" id="inputEmailAddress" type="email" aria-describedby="emailHelp" placeholder="Enter email address" /></div>
+                             
+                            
+                            <div class="form-row">
+                                <div class="col-md-6"><div class="form-group">
+                                    <select  placeholder="Country" id="selectRegion" ([ngModel])="selectedCountry" (change)="changeCountry($event)">
+                                        <option class="form-control py-4">--Region--</option>
+                                        <option class="form-control py-4" *ngFor="let Region of Regiones">{{Region.name}}</option>
+                                    </select>
+                                </div>
+                                </div> 
+                            
+                            
+                                <div class="col-md-6 "><div class="form-group">
+                                    <select placeholder="Pais"  id="selectPais">
+                                    <option>--Paises--</option>
+                                    <option *ngFor="let pai of paises">{{pai}}</option>
+                                </select>
+                                </div>
+                                </div>
+                            </div>
+                        
+                           
+                            
+                               
+                            
                             <div class="form-row">
                                 <div class="col-md-6">
-                                    <div class="form-group"><label class="small mb-1" for="inputPassword">Password</label><input class="form-control py-4" id="inputPassword" type="password" placeholder="Enter password" /></div>
+                                    <div class="form-group"><label class="small mb-1" for="inputPassword">Contraseña</label><input class="form-control py-4" id="inputPassword" type="password" placeholder="Enter password" /></div>
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="form-group"><label class="small mb-1" for="inputConfirmPassword">Confirm Password</label><input class="form-control py-4" id="inputConfirmPassword" type="password" placeholder="Confirm password" /></div>
+                                    <div class="form-group"><label class="small mb-1" for="inputConfirmPassword">Confirme Contraseña</label><input class="form-control py-4" id="inputConfirmPassword" type="password" placeholder="Confirm password" /></div>
                                 </div>
                             </div>
                             <div class="form-group mt-4 mb-0"><a class="btn btn-primary btn-block" routerLink="/dashboard">Create Account</a></div>
                         </form>
                     </div>
                     <div class="card-footer text-center">
-                        <div class="small"><a routerLink="/auth/login">Have an account? Go to login</a></div>
+                        <div class="small"><a routerLink="/auth/client-login">Have an account? Go to login</a></div>
                     </div>
                 </div>
             </div>
