--- a/app movil/src/modules/auth/containers/register/register.component.html
+++ b/app movil/src/modules/auth/containers/register/register.component.html
@@ -3,23 +3,31 @@
         <div class="row justify-content-center">
             <div class="col-lg-7">
                 <div class="card shadow-lg border-0 rounded-lg mt-5">
-                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Create Account</h3></div>
+                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Crear Cuenta</h3></div>
                     <div class="card-body">
-                        <form>
+                        <form #f="ngForm">
                             <div class="form-row">
                                 <div class="col-md-6">
-                                    <div class="form-group"><label class="small mb-1" for="inputFirstName">Nombre</label><input class="form-control py-4" id="inputFirstName" type="text" placeholder="Enter first name" /></div>
+                                    <div class="form-group"><label class="small mb-1" for="inputFirstName">Nombre</label><input class="form-control py-4" id="inputFirstName" type="text" placeholder="Enter first name" name="nombre" ngModel/></div>
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="form-group"><label class="small mb-1" for="inputLastName">Apellidos</label><input class="form-control py-4" id="inputLastName" type="text" placeholder="Enter last name" /></div>
+                                    <div class="form-group"><label class="small mb-1" for="inputLastName">Apellidos</label><input class="form-control py-4" id="inputLastName" type="text" placeholder="Enter last name" name="apellidos" ngModel/></div>
                                 </div>
                             </div>
-                            <div class="form-group"><label class="small mb-1" for="inputEmailAddress">Email</label><input class="form-control py-4" id="inputEmailAddress" type="email" aria-describedby="emailHelp" placeholder="Enter email address" /></div>
+                            <div class="form-group"><label class="small mb-1" for="inputEmailAddress">Email</label><input class="form-control py-4" id="inputEmailAddress" type="email" aria-describedby="emailHelp" placeholder="Enter email address" name="email" ngModel/></div>
                              
+                            <div class="form-row">
+                                <div class="col-md-6">
+                                    <div class="form-group"><label class="small mb-1" for="inputPassword">Contraseña</label><input class="form-control py-4" id="inputPassword" type="password" placeholder="Enter password" name="password" ngModel/></div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group"><label class="small mb-1" for="inputConfirmPassword">Confirme Contraseña</label><input class="form-control py-4" id="inputConfirmPassword" type="password" placeholder="Confirm password" name="confirmnombre" ngModel/></div>
+                                </div>
+                            </div>
                             
                             <div class="form-row">
                                 <div class="col-md-6"><div class="form-group">
-                                    <select  placeholder="Country" id="selectRegion" ([ngModel])="selectedCountry" (change)="changeCountry($event)">
+                                    <select  placeholder="Country" id="selectRegion" ([ngModel])="selectedCountry" (change)="changeCountry($event)" name="region" ngModel>
                                         <option class="form-control py-4">--Region--</option>
                                         <option class="form-control py-4" *ngFor="let Region of Regiones">{{Region.name}}</option>
                                     </select>
@@ -28,27 +36,27 @@
                             
                             
                                 <div class="col-md-6 "><div class="form-group">
-                                    <select placeholder="Pais"  id="selectPais">
+                                    <select placeholder="Pais"  id="selectPais" name="pais" ngModel>
                                     <option>--Paises--</option>
                                     <option *ngFor="let pai of paises">{{pai}}</option>
                                 </select>
                                 </div>
                                 </div>
                             </div>
-                        
+                            
+                            <div class="form-row">
+                                <div class="col-md-6"><div class="form-group">
+                                    <div class="form-group"  id="descripcion"><label class="small mb-1" for="inputdireccion">Direcciones</label><textarea class="form-control py-4" id="inputdireccion" rows="1" cols="20" name="direccion" ngModel></textarea>
+                                        
+                                    </div><a class="btn btn-primary" (click)="addMasDescr()">+</a>
+                                </div></div>
+                            </div>
                            
                             
                                
                             
-                            <div class="form-row">
-                                <div class="col-md-6">
-                                    <div class="form-group"><label class="small mb-1" for="inputPassword">Contraseña</label><input class="form-control py-4" id="inputPassword" type="password" placeholder="Enter password" /></div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group"><label class="small mb-1" for="inputConfirmPassword">Confirme Contraseña</label><input class="form-control py-4" id="inputConfirmPassword" type="password" placeholder="Confirm password" /></div>
-                                </div>
-                            </div>
-                            <div class="form-group mt-4 mb-0"><a class="btn btn-primary btn-block" routerLink="/dashboard">Create Account</a></div>
+                            
+                            <div class="form-group mt-4 mb-0"><a class="btn btn-primary btn-block" (click)="go(f)">Create Account</a></div>
                         </form>
                     </div>
                     <div class="card-footer text-center">
