--- a/app web/src/modules/dashboard/containers/dashboard/dashboard.component.html
+++ b/app web/src/modules/dashboard/containers/dashboard/dashboard.component.html
@@ -1,1 +1,10 @@
-<sb-layout-dashboard><sb-dashboard-head title="Dashboard" [hideBreadcrumbs]="false"></sb-dashboard-head><sb-dashboard-cards></sb-dashboard-cards><sb-dashboard-charts></sb-dashboard-charts><sb-dashboard-tables></sb-dashboard-tables></sb-layout-dashboard>
+<sb-layout-dashboard><sb-dashboard-head title="Dashboard" [hideBreadcrumbs]="false">
+
+</sb-dashboard-head>
+<sb-dashboard-cards></sb-dashboard-cards>
+<sb-dashboard-contenido></sb-dashboard-contenido>
+<!--
+<sb-dashboard-charts></sb-dashboard-charts>
+<sb-dashboard-tables></sb-dashboard-tables>
+--> 
+</sb-layout-dashboard>
