--- a/app web/src/modules/store/containers/shop/shop.component.html
+++ b/app web/src/modules/store/containers/shop/shop.component.html
@@ -17,7 +17,41 @@
       <!-- /.col-lg-3 -->
 
       <div class="col-lg-9">
-        
+       
+
+        <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
+          <img class="d-block img-fluid" [src]="Carrus" alt="First slide">
+
+          
+        </div>
+
+        <div class="row">
+          <ng-container *ngFor="let card of cards">
+          <div class="col-lg-4 col-md-6 mb-4">
+            
+            <div class="card h-100" >
+              <a href="#"><img class="card-img-top" src={{card.img}}></a>
+              <div class="card-body">
+                <h4 class="card-title">
+                  <a href="#">{{card.title}}</a>
+                </h4>
+                <h5>$24.99</h5>
+                <p class="card-text">{{card.description}}</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted" *ngFor='let in of counter(card.stars) ;let i = index'>&#9733; </small>
+              </div>
+            </div>
+          
+          </div>
+        </ng-container>
+          
+
+          
+
+        </div>
+        <!-- /.row -->
+
         
       </div>
       <!-- /.col-lg-9 -->
