--- a/app web/src/modules/store/containers/shop/shop.component.html
+++ b/app web/src/modules/store/containers/shop/shop.component.html
@@ -35,7 +35,7 @@
                 <h4 class="card-title">
                   <a href="#">{{card.title}}</a>
                 </h4>
-                <h5>$24.99</h5>
+                <h5>₡{{card.precio}}</h5>
                 <p class="card-text">{{card.description}}</p>
               </div>
               <div class="card-footer">
